<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B"
    tools:context=".ui.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1B1B1B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_uniflix_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_uniflix"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/logo_uniflix_no_shadow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/textview_usuario"
                android:textAlignment="textStart"
                android:textColor="@color/titulo_color"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/user"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_usuario"
                android:inputType="textPersonName"
                android:textColorHint="#8C8484" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/textview_email"
                android:textColor="@color/titulo_color"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#8C8484" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/textview_senha"
                android:textColor="@color/titulo_color"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/senha"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_senha"
                android:inputType="textPassword"
                android:textColorHint="#8C8484" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/textview_senhanov"
                android:textColor="@color/titulo_color"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/senha_repete"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_senhanov"
                android:inputType="textPassword"
                android:textColorHint="#8C8484" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/titulo_color"
            android:clickable="true"
            android:text="@string/button_cadastrar"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ja_cadastrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="Já cadastrado? Faça o Login"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progress_bar_registrar"
            style="?android:attr/progressBarStyle"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:progressDrawable="@color/titulo_color"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:visibility="invisible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

