<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/perfil_svg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentEnd="false"
    android:layout_alignParentBottom="true"
    android:background="#1B1B1B"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1B1B1B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movieList2"
                android:layout_width="100dp"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/perifil_svg"
                app:srcCompat="@drawable/account_circle_white_18dp"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_bem_avaliados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/textview_email"
                android:textColor="@color/titulo_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inEmail"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_usuario"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#8C8484"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/textview_senha"
                android:textColor="@color/titulo_color"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Senha" />

            <EditText
                android:id="@+id/inPass"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/placeholder_senha"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#8C8484"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSgnup"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="55dp"
                android:background="#FFFFFF"
                android:clickable="true"
                android:focusable="auto"
                android:linksClickable="true"
                android:onClick="cadastra"
                android:text="Sign Up"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="59dp"
                android:background="#FF0000"
                android:clickable="true"
                android:focusable="auto"
                android:linksClickable="true"
                android:onClick="verificaDados"
                android:text="login"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLogFb"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:background="#005CFF"
                android:text="@string/button_face"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Sign Out"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>