<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#1B1B1B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_uniflix_profile"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:contentDescription="@string/logo_uniflix"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/logo_uniflix_no_shadow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movieList3"
                    android:layout_width="153dp"
                    android:layout_height="103dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:contentDescription="perifil_svg"
                    android:onClick="selecionaPerfil"
                    app:srcCompat="@drawable/account_circle_white_18dp"
                    tools:ignore="VectorDrawableCompat"
                    tools:srcCompat="@tools:sample/avatars[0]" />

                <ImageView
                    android:id="@+id/movieList4"
                    android:layout_width="157dp"
                    android:layout_height="103dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:contentDescription="perifil_svg"
                    android:onClick="selecionaPerfil"
                    app:srcCompat="@drawable/account_circle_white_18dp"
                    tools:ignore="VectorDrawableCompat"
                    tools:srcCompat="@tools:sample/avatars[1]" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="selecionaPerfil"
                    android:text="@string/nomePerfil"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/titulo_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="selecionaPerfil"
                    android:text="@string/nomePerfil2"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/titulo_color"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movieList2"
                android:layout_width="196dp"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="perifil_svg"
                android:onClick="selecionaPerfil"
                app:srcCompat="@drawable/account_circle_white_18dp"
                tools:ignore="VectorDrawableCompat"
                tools:srcCompat="@tools:sample/avatars[2]" />

            <ImageView
                android:id="@+id/movieList"
                android:layout_width="211dp"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:contentDescription="perifil_svg"
                android:onClick="selecionaPerfil"
                app:srcCompat="@drawable/account_circle_white_18dp"
                tools:ignore="VectorDrawableCompat"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:text="@string/nomePerfil"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selecionaPerfil"
                android:text="@string/nomePerfil3"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/titulo_color"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selecionaPerfil"
                android:text="@string/nomePerfil4"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/titulo_color"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="150dp"
                    app:srcCompat="@android:drawable/ic_menu_add" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="196dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="150dp"
                    app:srcCompat="@android:drawable/ic_menu_manage" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>